# SignalForge

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/: conventions.md  settings.json
.claude/agents/: code-reviewer.md  llm-cost-guard.md
.claude/commands/: add-source.md
.claude/hooks/: vault-guard-pretooluse.sh
config/: interests.yaml  settings.yaml  settings.yaml.example  sources.yaml
docs/: DESIGN.md
src/signalforge/: __init__.py  cli.py  config.py  db.py  feedback.py  llm.py  models.py
src/signalforge/ingest/: __init__.py  base.py  github.py  hackernews.py  rss.py
src/signalforge/report/: __init__.py  daily.py
src/signalforge/report/templates/: daily.md.j2
src/signalforge/score/: __init__.py  rubrics.py
tests/: conftest.py  test_cli.py  test_cli_mark.py  test_cli_score.py  test_config.py  test_daily_chain.py  test_db.py  test_digest_cli.py  test_feedback.py  test_llm.py  test_models.py
tests/fixtures/: daily_digest_golden.md  github_releases.json  github_tags.json  hn_front_page.json  hn_keyword_mcp.json  malformed_feed.xml  simonwillison_atom.xml
tests/ingest/: conftest.py  test_base.py  test_github.py  test_hackernews.py  test_ingest_all.py  test_rss.py
tests/report/: test_daily.py
tests/score/: test_rubrics.py  test_triage.py
vault/daily/: 2026-07-16.md  2026-07-17.md  2026-07-18.md
