[project]
name = "signalforge"
version = "0.1.0"
description = "Local-first AI engineering intelligence pipeline — ingests, scores, and reports what changed that matters"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.117.0",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "tenacity>=9.1.4",
    "typer>=0.27.0",
]

[project.scripts]
signalforge = "signalforge.cli:app"

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# G/LOG: logging correctness. G101 (extra= key clashing with a reserved LogRecord
# attribute) is a crash that only fires once logging is actually enabled, so a
# test suite running at WARNING never sees it. Lint catches it instead.
select = ["E", "F", "I", "UP", "B", "SIM", "TID", "G", "LOG"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["feedparser.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "respx>=0.23.1",
    "ruff>=0.15.21",
    "types-pyyaml>=6.0.12.20260518",
]
